# Medixo-back-end

./: Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
Doctor/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
Doctor/migrations/: 0001_initial.py  0002_rename_country_doctor_building_number_and_more.py  0003_doctor_fathi.py  0003_remove_doctor_gender_doctor_specialty.py  0004_doctor_gender.py  0004_rename_fathi_doctor_user.py  0005_alter_doctor_email.py  0006_merge_0004_doctor_gender_0005_alter_doctor_email.py  0007_remove_doctor_gender_remove_doctor_specialty.py  0008_doctor_date_doctor_hour_doctor_img_and_more.py  0008_doctor_img.py  0009_alter_doctor_img.py  0009_rename_user_appointment_doctor_id_remove_doctor_date_and_more.py  0010_alter_doctor_img.py  0011_doctor_speciality.py  0012_merge_20220103_0905.py  0012_merge_20220103_1734.py  0013_appointment_doctor_name.py  0014_appointment_clinic_location.py  0015_merge_20220104_1148.py  0015_rename_img_doctor_clinc_img.py
Medixo/: asgi.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
Medixo/Medixo/: settings.py  wsgi.py
Medixo/Medixo_admin/: apps.py  models.py
Medixo/Pharmacy/: admin.py
Medixo_admin/: admin.py  models.py  urls.py
Medixo_admin/migrations/: 0001_initial.py  0003_delete_doctor_delete_pharmacy.py
Pharmacy/: admin.py  models.py  serializers.py  urls.py  views.py
Pharmacy/migrations/: 0001_initial.py  0002_remove_pharmacy_age.py  0003_pharmacy_name.py  (+4 more)
auth/: custom_claims.py  serializers.py  urls.py  views.py
(+2 files in other folders)
